--- a/contact_catalog/app/views/contacts/show.html.erb
+++ b/contact_catalog/app/views/contacts/show.html.erb
@@ -1,5 +1,37 @@
 <h1><%= @contact.name %></h1>
-
-<h3><%= @contact.age %></h3>
-
-<%= link_to "Back to all contacts", contacts_path %>
+<table>
+  <tbody>
+    <tr>
+      <td>Email:</td>
+      <td><%= @contact.email %></td>
+    </tr>
+    <tr>
+      <td>Phone:</td>
+      <td><%= @contact.phone_number %></td>
+    </tr>
+    <tr>
+      <td>Languages:</td>
+      <td><%= @contact.computer_languages %></td>
+    </tr>
+    <tr>
+      <td>Pets:</td>
+      <td><%= @contact.pets %></td>
+    </tr>
+    <tr>
+      <td>Age:</td>
+      <td><%= @contact.age %></td>
+    </tr>
+  </tbody>
+</table>
+<div class='link'>
+  <div class='show_link'>
+    <%= link_to "Edit contact", edit_path %>
+  </div>
+  <div class='show_link'>
+    <%= link_to "Delete contact", contact_path, method: :delete,
+    data: {confirm: "Are you sure you want to delete this contact?"} %>
+  </div>
+  <div class='show_link'>
+    <%= link_to "Back to all contacts", contacts_path %>
+  </div>
+</div>
