--- a/contact_catalog/app/assets/stylesheets/contacts.scss
+++ b/contact_catalog/app/assets/stylesheets/contacts.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the contacts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+  text-align: center;
+}
+
+td {
+  width: 50%;
+}
+
+input {
+  display: block;
+}
+
+.link {
+  margin-top: 5%;
+}
+
+.show_link {
+  display: inline-block;
+  margin-right: 1%;
+}
