--- a/contact_catalog/app/views/contacts/_form.html.erb
+++ b/contact_catalog/app/views/contacts/_form.html.erb
@@ -1,37 +1,42 @@
-<%= form_for @contact do |f| %>
+<div id="form_wrapper">
+  <%= form_for @contact do |f| %>
 
-  <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <div>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+    </div>
+
+    <div>
+      <%= f.label :age %>
+      <%= f.text_field :age %>
+    </div>
+
+    <div>
+      <%= f.label :phone_number %>
+      <%= f.text_field :phone_number %>
+    </div>
+
+    <div>
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+    </div>
+
+    <div>
+      <%= f.label :computer_languages %>
+      <%= f.text_area :computer_languages %>
+    </div>
+
+    <div>
+      <%= f.label :pets %>
+      <%= f.text_area :pets %>
+    </div>
+
+    <%= f.submit "Submit" %>
+
+  <% end %>
+
+  <div class='link'>
+    <%= link_to "Back to all contacts", contacts_path %>
   </div>
+</div>
 
-  <div>
-    <%= f.label :age %>
-    <%= f.text_field :age %>
-  </div>
-
-  <div>
-    <%= f.label :phone_number %>
-    <%= f.text_field :phone_number %>
-  </div>
-
-  <div>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-
-  <div>
-    <%= f.label :computer_languages %>
-    <%= f.text_field :computer_languages %>
-  </div>
-
-  <div>
-    <%= f.label :pets %>
-    <%= f.text_field :pets %>
-  </div>
-
-  <%= f.submit "Submit" %>
-
-<% end %>
-
-<%= link_to "Back to all contacts", contacts_path %>
